# ShapeFromCaustics

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  hyperparameter_helper.py  setup.py  shape_from_caustics.py
PyOptix/: PhotonDifferentialSplattig.cpp  RayTrace.cpp  utils.hpp
PyOptix/kernel/: photon_differentials.cu  prd.h  ray_programs.cu
cmake/: FindOptiX.cmake
geometry/: bottom_lens.mtl  bottom_lens2.mtl  gt_mesh.mtl  light_box.mtl  light_box_moved.mtl  top_lens.mtl  top_lens2.mtl
model/: caustics.py  photon_differential.py  renderable_object.py  utils.py
runs/: .gitignore
schwartzburg_2014/: ma.py
